bluec-tests/tests/invalid/types_pointer/static_init5.c
long a[4] = {11, 22, 33, 44};
int i = 2;
int *ptr = &a[i];

int main(void)
{
    return 0;
}
